Adding better docs for download_multiple_pv_systems_to_disk

--- a/examples/quick_start.ipynb
+++ b/examples/quick_start.ipynb
@@ -212,23 +212,257 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Get PV systems for a country\n",
+    "\n",
+    "If you haven't paid for a commercial license, then one way to get all the PV systems for a specific country is to scrape the PVOutput.org/map.jsp website.  This can be done using `pvoutput.mapscraper.get_pv_systems_for_country`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pvoutput.mapscraper import get_pv_systems_for_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading page  0"
+     ]
+    }
+   ],
+   "source": [
+    "pv_systems_for_uk = get_pv_systems_for_country(\n",
+    "    country='United Kingdom',  # See pvoutput.consts.PV_OUTPUT_COUNTRY_CODES for all recognised strings\n",
+    "    sort_by='capacity',\n",
+    "    ascending=False,\n",
+    "    max_pages=1  # For this demo, we'll just scrape the first page of the map\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>panel</th>\n",
+       "      <th>inverter</th>\n",
+       "      <th>address</th>\n",
+       "      <th>orientation</th>\n",
+       "      <th>shade</th>\n",
+       "      <th>array_tilt_degrees</th>\n",
+       "      <th>timeseries_duration</th>\n",
+       "      <th>total_energy_gen_Wh</th>\n",
+       "      <th>average_daily_energy_gen_Wh</th>\n",
+       "      <th>average_efficiency_kWh_per_kW</th>\n",
+       "      <th>system_AC_capacity_W</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>system_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>24768</td>\n",
+       "      <td>mfl_qfa</td>\n",
+       "      <td>1050x240W qidong</td>\n",
+       "      <td>aurora trio</td>\n",
+       "      <td>United Kingdom OX7</td>\n",
+       "      <td>South 180.0°</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>446 days</td>\n",
+       "      <td>307029000.0</td>\n",
+       "      <td>688405.0</td>\n",
+       "      <td>2.732</td>\n",
+       "      <td>252000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>35328</td>\n",
+       "      <td>Semtek</td>\n",
+       "      <td>408x245W et</td>\n",
+       "      <td>samil lake</td>\n",
+       "      <td>United Kingdom SA14</td>\n",
+       "      <td>South 180.0°</td>\n",
+       "      <td>No</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>12 days</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>7500.0</td>\n",
+       "      <td>0.075</td>\n",
+       "      <td>99960.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26965</td>\n",
+       "      <td>mfl_phc</td>\n",
+       "      <td>336x250W Q Cells Pro-G3 250</td>\n",
+       "      <td>Enphase M215</td>\n",
+       "      <td>United Kingdom CV47</td>\n",
+       "      <td>South 0.0°</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1857 days</td>\n",
+       "      <td>414447000.0</td>\n",
+       "      <td>223181.0</td>\n",
+       "      <td>2.688</td>\n",
+       "      <td>84000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>66991</td>\n",
+       "      <td>Ledbury Community Hospital</td>\n",
+       "      <td>152x325W + 80x325W Unknown</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>United Kingdom HR8</td>\n",
+       "      <td>South 180.0° / South West 225.0°</td>\n",
+       "      <td>No</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1496 days</td>\n",
+       "      <td>297464000.0</td>\n",
+       "      <td>198840.0</td>\n",
+       "      <td>2.651</td>\n",
+       "      <td>75400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11542</td>\n",
+       "      <td>Wray Farms Solar System</td>\n",
+       "      <td>200x250W Emmvee ES 230 M60 B</td>\n",
+       "      <td>SMA TRI-Power 1700 TL</td>\n",
+       "      <td>United Kingdom PE11</td>\n",
+       "      <td>South 180.0°</td>\n",
+       "      <td>No</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2481 days</td>\n",
+       "      <td>298896000.0</td>\n",
+       "      <td>120474.0</td>\n",
+       "      <td>2.473</td>\n",
+       "      <td>50000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 name                         panel  \\\n",
+       "system_id                                                             \n",
+       "24768                         mfl_qfa              1050x240W qidong   \n",
+       "35328                          Semtek                   408x245W et   \n",
+       "26965                         mfl_phc   336x250W Q Cells Pro-G3 250   \n",
+       "66991      Ledbury Community Hospital    152x325W + 80x325W Unknown   \n",
+       "11542         Wray Farms Solar System  200x250W Emmvee ES 230 M60 B   \n",
+       "\n",
+       "                        inverter              address  \\\n",
+       "system_id                                               \n",
+       "24768                aurora trio   United Kingdom OX7   \n",
+       "35328                 samil lake  United Kingdom SA14   \n",
+       "26965               Enphase M215  United Kingdom CV47   \n",
+       "66991                    Unknown   United Kingdom HR8   \n",
+       "11542      SMA TRI-Power 1700 TL  United Kingdom PE11   \n",
+       "\n",
+       "                                orientation shade  array_tilt_degrees  \\\n",
+       "system_id                                                               \n",
+       "24768                          South 180.0°    No                 NaN   \n",
+       "35328                          South 180.0°    No                10.0   \n",
+       "26965                            South 0.0°   Low                11.0   \n",
+       "66991      South 180.0° / South West 225.0°    No                40.0   \n",
+       "11542                          South 180.0°    No                15.0   \n",
+       "\n",
+       "          timeseries_duration  total_energy_gen_Wh  \\\n",
+       "system_id                                            \n",
+       "24768                446 days          307029000.0   \n",
+       "35328                 12 days              90000.0   \n",
+       "26965               1857 days          414447000.0   \n",
+       "66991               1496 days          297464000.0   \n",
+       "11542               2481 days          298896000.0   \n",
+       "\n",
+       "           average_daily_energy_gen_Wh  average_efficiency_kWh_per_kW  \\\n",
+       "system_id                                                               \n",
+       "24768                         688405.0                          2.732   \n",
+       "35328                           7500.0                          0.075   \n",
+       "26965                         223181.0                          2.688   \n",
+       "66991                         198840.0                          2.651   \n",
+       "11542                         120474.0                          2.473   \n",
+       "\n",
+       "           system_AC_capacity_W  \n",
+       "system_id                        \n",
+       "24768                  252000.0  \n",
+       "35328                   99960.0  \n",
+       "26965                   84000.0  \n",
+       "66991                   75400.0  \n",
+       "11542                   50000.0  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pv_systems_for_uk.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Check how many API requests we have left this hour"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'rate_limit_remaining': 299,\n",
-       " 'rate_limit_total': 300,\n",
+       "{'rate_limit_remaining': 897,\n",
+       " 'rate_limit_total': 900,\n",
        " 'rate_limit_reset_time': Timestamp('2019-09-03 12:00:00+0000', tz='UTC')}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,9 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Batch downloading\n",
-    "\n",
-    "Use `pv.batch_download` to download data for a list of PV system IDs, and for a range of dates.\n",
+    "## Get batch status\n",
     "\n",
     "If you have paid for a 'PVOutput Data Services' subscription, and you've added `data_service_url` to `~/.pvoutput.yml`, then you can use the PVOutput.org download batch status API to download a year of data at a time:"
    ]
@@ -941,6 +1173,17 @@
    ],
    "source": [
     "batch_status['instantaneous_power_gen_W'].plot(figsize=(15, 5), linewidth=0.5);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Batch download multiple PV systems to disk\n",
+    "\n",
+    "`PVOutput.download_multiple_systems_to_disk` can download multiple PV systems, and save them to disk as an HDF5 file.\n",
+    "\n",
+    "See the `download_pv_timeseries.ipynb` notebook for a working example."
    ]
   }
  ],
