documentation improvement as api error unclear

--- a/examples/quick_start.ipynb
+++ b/examples/quick_start.ipynb
@@ -793,7 +793,7 @@
    "source": [
     "## Get timeseries of power data for one day\n",
     "\n",
-    "In one API request, PVOutput.org allows us to retrieve timeseries data for one day and one PV system. Only able to search by system_id if you have donated"
+    "In one API request, PVOutput.org allows us to retrieve timeseries data for one day and one PV system. Only able to search by system_id if you have donated."
    ]
   },
   {
