renamed function to clarify it is a forecast

--- a/examples/quick_start.ipynb
+++ b/examples/quick_start.ipynb
@@ -1200,7 +1200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "insolation_data = pv.get_insolation('2020-12-31', pv_system_id=75402)"
+    "insolation_data = pv.get_insolation_forecast('2020-12-31', pv_system_id=75402)"
    ]
   },
   {
