Rename system metadata column as per issue #48

--- a/examples/quick_start.ipynb
+++ b/examples/quick_start.ipynb
@@ -63,7 +63,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>system_AC_capacity_W</th>\n",
+       "      <th>system_DC_capacity_W</th>\n",
        "      <th>address</th>\n",
        "      <th>orientation</th>\n",
        "      <th>num_outputs</th>\n",
@@ -165,7 +165,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                            name  system_AC_capacity_W              address  \\\n",
+       "                            name  system_DC_capacity_W              address  \\\n",
        "system_id                                                                     \n",
        "68309                Thorn House                  3960  United Kingdom OX16   \n",
        "61190               Banbury OX16                  5600  United Kingdom OX16   \n",
@@ -285,7 +285,7 @@
        "      <th>total_energy_gen_Wh</th>\n",
        "      <th>average_daily_energy_gen_Wh</th>\n",
        "      <th>average_efficiency_kWh_per_kW</th>\n",
-       "      <th>system_AC_capacity_W</th>\n",
+       "      <th>system_DC_capacity_W</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>system_id</th>\n",
@@ -424,7 +424,7 @@
        "66991                         198840.0                          2.651   \n",
        "11542                         120474.0                          2.473   \n",
        "\n",
-       "           system_AC_capacity_W  \n",
+       "           system_DC_capacity_W  \n",
        "system_id                        \n",
        "24768                  252000.0  \n",
        "35328                   99960.0  \n",
@@ -505,7 +505,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>system_AC_capacity_W</th>\n",
+       "      <th>system_DC_capacity_W</th>\n",
        "      <th>address</th>\n",
        "      <th>orientation</th>\n",
        "      <th>num_outputs</th>\n",
@@ -607,7 +607,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                      name  system_AC_capacity_W              address  \\\n",
+       "                      name  system_DC_capacity_W              address  \\\n",
        "system_id                                                               \n",
        "61190         Banbury OX16                  5600  United Kingdom OX16   \n",
        "62751          Banbury PW2                  5600  United Kingdom OX16   \n",
@@ -658,7 +658,7 @@
      "data": {
       "text/plain": [
        "name                                  Banbury OX16\n",
-       "system_AC_capacity_W                          5600\n",
+       "system_DC_capacity_W                          5600\n",
        "address                                       OX16\n",
        "num_panels                                      16\n",
        "panel_capacity_W_each                          350\n",
@@ -1003,7 +1003,7 @@
     "ax.xaxis.set_major_formatter(mdates.DateFormatter('%H', tz=status.index.tz))\n",
     "\n",
     "# Plot the system size\n",
-    "system_size = metadata['system_AC_capacity_W']\n",
+    "system_size = metadata['system_DC_capacity_W']\n",
     "ax.plot(ax.get_xlim(), (system_size, system_size), label='system AC capacity')\n",
     "\n",
     "ax.legend();"
